objects/zqu__List_Filter_Item__c.object
<CustomObject>
    <description>Zuora List Filter Item object. Used to store a filter logic row and to be applied to the corresponding list component.</description>
    <fields>
        <fullName>zqu__Field_Name__c</fullName>
        <description>Left field value for the associated SObject the filter row is applied to.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Fixed_Value__c</fullName>
        <label>Fixed Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Left_Field_Type__c</fullName>
        <label>Left Field Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Left_Object_Name__c</fullName>
        <description>Used to store the left object used for the list filter.</description>
        <label>Left Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Left_Object_Type__c</fullName>
        <label>Left Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__List_Filter__c</fullName>
        <description>The associated list filter for this logic row.</description>
        <label>List Filter</label>
        <referenceTo>zqu__List_Filter__c</referenceTo>
        <relationshipLabel>List Filter Items</relationshipLabel>
        <relationshipName>List_Filter_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>lower than</fullName>
                </value>
                <value>
                    <fullName>lower or equal</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Right_Object_Context_Key__c</fullName>
        <label>Right Object Context Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Right_Object_Name__c</fullName>
        <description>The right object type (quote, user, profile or role) if a field is selected in the right column (aka. dynamically generated value).</description>
        <label>Right Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Right_Object_Type__c</fullName>
        <label>Right Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Segment_Id__c</fullName>
        <description>The segment ID this item is associated with.</description>
        <inlineHelpText>The segment ID this item is associated with.</inlineHelpText>
        <label>Segment Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>List Filter Item</label>
    <nameField>
        <label>List Filter Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Filter Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>